# lorax

./: .codacy.yml  .coveragerc  .dockerignore  .env  .gitattributes  .gitignore  .landscape.yml  .travis.yaml  .travis.yml  CHANGELOG.rst  ChangeLog.txt  Dockerfile  INSTALL.anaconda  INSTALL.anaconda.txt  INSTALL.configure+run.txt  INSTALL.direct.txt  INSTALL.gentoo.txt  INSTALL.linux.txt  INSTALL.mac.txt  INSTALL.test.txt  INSTALL.unix.txt  LICENSE.txt  MANIFEST.in  README.rst  UPGRADE.txt  docker-compose.override.yml  docker-compose.yml  requirements.in  requirements.txt  run.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
build_scripts/: build_example.sh  build_example_bsd.sh  build_example_linux.sh  build_example_mac.sh  config_example.sh  get_build_scripts.sh  get_lorax_scripts.sh  get_scripts.sh  lorax_build.sh  lorax_build_example.sh  lorax_scripts.sh  lorax_test.sh  lorax_tool  lorax_tool.sh  run_lorax_tests.sh
build_scripts/example/: 0_defs_to_source.sh  1_build_lorax.sh  2_builder_to_user.sh  3_test_rc.sh  4_configure_prod_on_stage.sh  5_test_prod.sh  README.rst  dev_config.sh  my_build.sh  prod_config.sh  removedirs.sh  stage_config.sh
docs/: INSTALL.direct.txt  INSTALL.mac.txt  MONITOR.txt  Makefile  anaconda.rst  conf.py  configuration.rst  direct.rst  goals.rst  index.rst  installation.rst  lorax.rst  modules.rst  monitoring.rst  running.rst  test.rst  urls.rst
ebuilds/Flask-CLI/: Flask-CLI.ebuild
ebuilds/Flask-RQ2/: Flask-RQ2-17.0.ebuild
ebuilds/croniter/: croniter-0.3.16.ebuild
ebuilds/flask/: flask.ebuild
ebuilds/lorax/: lorax.ebuild
ebuilds/rq/: rq-0.6.0.ebuild
ebuilds/rq-dashboard/: rq-dashboard-0.3.7.ebuild
ebuilds/rq-scheduler/: rq-scheduler-0.7.0.ebuild
install/: 0_defs_to_source.sh  1_build_lorax.sh  2_builder_to_user.sh  2_load_families.sh  3_builder_to_user.sh  4_configure_prod_on_stage.sh  6_test_prod.sh  lorax_tool.sh  removedirs.sh  stage_config.sh
instance/: config.cfg  lorax_envvars.sh  start_lorax.sh  test_all.sh
lorax/: ChangeLog.txt  __init__.py  __main__.py  cli.py  common.py  config.py  config_file.py  core.py  default_settings.py  filesystem.py  flaskrun.py  logging.py  logs.py  version.py
lorax/etc/: alertmanager.yml  alignment-supervisord.conf  coverage.conf  crashmail-supervisord.conf  nginx.conf  prometheus.yml  redis-supervisord.conf  redis.conf  server-conf.sh  server-supervisord-debug.conf  server-supervisord.conf  supervisord-inet.conf  supervisord-unix.conf  supervisord.conf  treebuilder-supervisord.conf
lorax/fasttree/: ChangeLog.txt  LICENSE.txt  README.txt
lorax/instance/: run_lorax.py
lorax/templates/: index.html
lorax/test/: aspartic_peptidases.faa  copy_family.sh  create_anaconda_venv.sh  create_families.sh  get_big_model.sh  install_families.sh  load_family.sh  lorax_envvars.sh  put_HMM.sh  (+5 more)
start_scripts/: bsd
templates/: index.html
test/: 59026816.hmm  aspartic_peptidases_aligned.faa  cleanup_test.sh  config.cfg  config.json  config.py  lorax_config.sh  lorax_envvars.sh  post_FASTA.sh  post_alignment.sh  post_sequences.sh  post_to_lorax.sh  sequences.faa  start_lorax.sh  test_all.sh  zeama.faa
(+19 files in other folders)
