[metadata]
name = lorax
provides = lorax
url = http://github.com/ncgr/lorax
description = Server for phylogenetic tree generation and extension
author = Joel Berendzen
author_email = joelb@ncgr.org
maintainer = Joel Berendzen
maintainer_email = joelb@ncgr.org
long_description = file:README.rst
description-file =
    README.rst
    CHANGELOG.rst
keywords =
    science
    biology
    bioinformatics
    genomics
    phylogeny
    genes
    gene families
    multiple sequence alignment
    phylogenetic trees
license = BSD 3-Clause License
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = lorax
install_requires =
    Flask-RQ2[cli]
    biopython
    rq_dashboard

[options.package_data]
* =
    *.txt
    *.rst
    *.html
    *.c
    *.faa
    *.hmm
    *.sh
    *.css
    *.js
    favicon.ico
    run_lorax.py
    supervisord.conf

[options.packages.find]
exclude =
    lorax.test.data
    lorax.test.logs

[bdist_wheel]
universal = 0

[wheel]
universal = 0


