[metadata]
name = lorax
url = http://github.com/LegumeFederation/lorax
author = Joel Berendzen
author_email = joelb@ncgr.org
maintainer = Joel Berendzen
maintainer_email = joelb@ncgr.org
long_description = file:README.rst
description-file =
    README.rst
    CHANGELOG.rst
keywords =
    science
    biology
    bioinformatics
    genomics
    phylogeny
    genes
    gene families
    multiple sequence alignment
    phylogenetic trees
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: C
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
zip_safe = False
include_package_data = True
packages = lorax
install_requires =
    distro==1.4.0
    Flask-RQ2[cli]==18.3
    biopython==1.73
    rq_dashboard
    gunicorn
    raven[flask]
    healthcheck
    superlance
    htpasswd
    prometheus-client
    coverage
    supervisor-wildcards

[options.package_data]
* =
    *.txt
    *.rst
    *.html
    *.c
    *.faa
    *.hmm
    *.sh
    *.css
    *.js
    *.conf
    *.cfg
    favicon.ico

[options.packages.find]
exclude =
    lorax.bin.FastTree-lorax

[wheel]
universal=0

